<resources>
    <string name="app_name">Here4Deals</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms_string">By Regitering, you agree that you\'ve read and accepted our User Agreement, you\'re atleast 18 years old, and you consent to our Privacy Notice and receiving marketing communication from us.</string>
    <string-array name="site">
        <item>Auction</item>
        <item>Classified</item>
    </string-array>
</resources>
