<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Personal Account" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Business Account" />
    </RadioGroup>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/email_text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="17sp"
        android:padding="10dp"
        android:background="@drawable/round_edittext_register"
        android:inputType="text"
        app:emptyAllowed="false"
        app:testErrorString="Email is incorrect!"
        app:testType="email"
        android:layout_below="@+id/radio_group"/>

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/confirm_text"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_email"
            android:padding="10dp"
            android:textSize="17sp"
            android:background="@drawable/round_edittext_register"
            android:inputType="text"
            app:emptyAllowed="false"
            app:testErrorString="Email is incorrect!"
            app:testType="email"
            android:layout_below="@+id/email_text"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/password_text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"
        android:textSize="17sp"
        android:background="@drawable/round_edittext_register"
        android:layout_below="@+id/confirm_text"
        android:inputType="textPassword"
        app:emptyAllowed="false"
        app:testType="nocheck"
        app:testErrorString="Password cannot be empty!"/>

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_text"
            android:orientation="horizontal"
            android:weightSum="10">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/first_name_text"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:textSize="17sp"
            android:background="@drawable/round_edittext_register"
            android:inputType="text"
            app:emptyAllowed="false"
            app:testErrorString="Enter First Name!"
            app:testType="nocheck"
            android:layout_weight="5"
            android:layout_marginEnd="5dp" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/last_name_text"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:padding="10dp"
                android:textSize="17sp"
                android:background="@drawable/round_edittext_register"
                android:inputType="text"
                app:emptyAllowed="false"
                app:testErrorString="Enter Last Name!"
                app:testType="nocheck"
                android:layout_weight="5"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/number_text"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:background="@drawable/round_edittext_register"
            android:inputType="text"
            app:emptyAllowed="false"
            android:textSize="17sp"
            app:testErrorString="Phone Number is incorrect!"
            app:testType="nocheck"
            android:layout_below="@+id/name_layout"/>

        <TextView
            android:id="@+id/terms_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_text"
            android:layout_marginTop="20dp"
            android:text="@string/terms_string"/>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@+id/terms_text"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>
    </ScrollView>

</LinearLayout>